--- a/final/jubileerd.css
+++ b/final/jubileerd.css
@@ -72,7 +72,7 @@ body {
 
 /* transformations */
 .glass.down {
-  transform: translateY(100%) translateY(4em) translateZ(0);
+  transform: translateY(100%) translateY(15em) translateZ(0);
 }
 
 .glass.down::before {
@@ -145,7 +145,7 @@ em {
 
 /* data-uri resources */
 body, .glass::before {
-  background-image: url('https://i2.wp.com/thewideo.com/wp-content/uploads/2018/10/9S5A2526.jpg?fit=1400%2C2100');
+  background-image: url('https://pbs.twimg.com/media/Dl61hyNX0AEeqe0.jpg');
 }
 
 a { color:black}
