--- a/final/longwaydown.css
+++ b/final/longwaydown.css
@@ -72,7 +72,7 @@ body {
 
 /* transformations */
 .glass.down {
-  transform: translateY(100%) translateY(-6em) translateZ(0);
+  transform: translateY(100%) translateY(8em) translateZ(0);
 }
 
 .glass.down::before {
@@ -119,7 +119,7 @@ p1{
 }
 
 p2{
-  font: 1.2em / 1.4 'kepler-std', serif;
+  font: 1.2em / 1.4 'Europa', sans-serif;
     font-size: 27px;
     padding-left: 425px;
 
