--- a/final/longwaydown.css
+++ b/final/longwaydown.css
@@ -8,13 +8,12 @@
     font-size: 30px;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    margin: 0 auto; /* scrolling effect  */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
 /*    font-family: Verdana;*/
-  
 }
 
 @keyframes typing {
